# StoreWarehouse

./: .gitignore  CMakeLists.txt  README.md  make_installer.ps1
cmake/: collect_dist.py  copy_dlls.cmake  copy_dlls.py
resources/: app.rc
src/: export.c  export.h  fileio.c  fileio.h  filter.c  filter.h  list.c  list.h  main.c  product.h  sort.c  sort.h
src/ui/: app.c  app.h  filter_window.c  filter_window.h  main_window.c  main_window.h  product_dialog.c  product_dialog.h  product_object.c  product_object.h
tests/: test_gtk.c  test_list.c  test_list.h  test_runner.c  test_sort.c  test_sort.h
